--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -23,15 +23,15 @@
         android:text="Profile"
         android:layout_marginTop="@dimen/_40sdp"
         android:textColor="@color/black"
-        android:textSize="@dimen/_18ssp"
+        android:textSize="@dimen/_16ssp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/logout_btn"
-        android:layout_width="@dimen/_18sdp"
-        android:layout_height="@dimen/_18sdp"
+        android:layout_width="@dimen/_16sdp"
+        android:layout_height="@dimen/_16sdp"
         android:layout_marginEnd="@dimen/_17sdp"
         android:src="@drawable/ic_logout"
         app:tint="@color/black"
@@ -43,7 +43,7 @@
         android:id="@+id/imageView9"
         android:layout_width="@dimen/_70sdp"
         android:layout_height="@dimen/_70sdp"
-        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_20sdp"
         android:src="@drawable/profile_dummy"
         app:layout_constraintEnd_toEndOf="@+id/textView8"
         app:layout_constraintStart_toStartOf="@+id/textView8"
@@ -81,6 +81,8 @@
         android:text="Edit Profile"
         android:backgroundTint="#161F30"
         app:cornerRadius="@dimen/_12sdp"
+        android:textSize="@dimen/_10sdp"
+        android:fontFamily="@font/montserrat_medium"
         android:layout_marginTop="@dimen/_10sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
