--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,12 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/montserrats_semibold"
+        android:fontFamily="@font/montserrat_bold"
         android:text="Sport"
         android:textColor="@color/white"
-        android:textSize="@dimen/_30ssp"
+        android:textSize="@dimen/_27ssp"
         android:textStyle="bold"
+        android:layout_marginEnd="@dimen/_2sdp"
         app:layout_constraintBottom_toTopOf="@+id/sign_in_btn"
         app:layout_constraintEnd_toStartOf="@+id/textView2"
         app:layout_constraintHorizontal_chainStyle="packed"
@@ -26,10 +27,10 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/montserrat_medium"
+        android:fontFamily="@font/montserrats_semibold"
         android:text="Reelzz"
         android:textColor="@color/green"
-        android:textSize="@dimen/_30ssp"
+        android:textSize="@dimen/_27ssp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,12 +41,12 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/sign_in_btn"
         android:layout_width="0dp"
-        android:layout_height="@dimen/_50sdp"
+        android:layout_height="@dimen/_45sdp"
         android:layout_marginBottom="@dimen/_10sdp"
         android:backgroundTint="@color/dark_grey"
         android:fontFamily="@font/montserrats_semibold"
         android:text="@string/sign_in"
-        android:textSize="@dimen/_14ssp"
+        android:textSize="@dimen/_13ssp"
         app:layout_constraintBottom_toTopOf="@+id/sign_up_btn"
         app:layout_constraintEnd_toEndOf="@+id/sign_up_btn"
         app:layout_constraintStart_toStartOf="@+id/sign_up_btn" />
@@ -53,14 +54,13 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/sign_up_btn"
         android:layout_width="0dp"
-        android:layout_height="@dimen/_50sdp"
+        android:layout_height="@dimen/_45sdp"
         android:backgroundTint="@color/green"
         android:fontFamily="@font/montserrats_semibold"
         android:text="@string/sign_up"
-        android:textSize="@dimen/_14ssp"
+        android:textSize="@dimen/_13ssp"
         android:layout_marginBottom="@dimen/_17sdp"
-        android:layout_marginStart="@dimen/_17sdp"
-        android:layout_marginEnd="@dimen/_17sdp"
+        android:layout_marginHorizontal="@dimen/_17sdp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
