--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -23,7 +23,7 @@
         android:text="Edit Profile"
         android:layout_marginTop="@dimen/_40sdp"
         android:textColor="@color/black"
-        android:textSize="@dimen/_18ssp"
+        android:textSize="@dimen/_16ssp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -89,7 +89,7 @@
                 android:background="@null"
                 android:gravity="end"
                 android:inputType="textCapWords"
-                android:fontFamily="@font/montserrat_medium"
+                android:fontFamily="@font/montserrats_semibold"
                 android:text="Matthew Jason"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_11ssp"
@@ -140,7 +140,7 @@
                 android:layout_marginStart="@dimen/_17sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
                 android:background="@null"
-                android:fontFamily="@font/montserrat_medium"
+                android:fontFamily="@font/montserrats_semibold"
                 android:gravity="end"
                 android:inputType="textCapWords"
                 android:text="MatthewJason@info.com"
@@ -193,7 +193,7 @@
                 android:layout_marginStart="@dimen/_17sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
                 android:background="@null"
-                android:fontFamily="@font/montserrat_medium"
+                android:fontFamily="@font/montserrats_semibold"
                 android:gravity="end"
                 android:inputType="textPassword"
                 android:text="Matthew Jason"
@@ -211,13 +211,14 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/save_btn"
         android:layout_width="0dp"
-        android:layout_height="@dimen/_50sdp"
+        android:layout_height="@dimen/_45sdp"
         android:backgroundTint="@color/dark_grey"
         android:layout_marginBottom="@dimen/_17sdp"
         android:layout_marginStart="@dimen/_17sdp"
         android:layout_marginEnd="@dimen/_17sdp"
         android:text="Save Information"
-        android:textSize="@dimen/_14ssp"
+        android:textSize="@dimen/_12ssp"
+        android:fontFamily="@font/montserrat_medium"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
