--- a/app/src/main/res/layout/fragment_my_topics.xml
+++ b/app/src/main/res/layout/fragment_my_topics.xml
@@ -20,11 +20,11 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_17sdp"
+        android:layout_marginBottom="@dimen/_22sdp"
         android:fontFamily="@font/montserrats_semibold"
         android:text="My Topics"
         android:textColor="@color/black"
-        android:textSize="@dimen/_18ssp"
+        android:textSize="@dimen/_16ssp"
         app:layout_constraintBottom_toBottomOf="@+id/view3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -45,6 +45,8 @@
         android:id="@+id/stroy_rv"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:paddingStart="@dimen/_15sdp"
+        android:paddingEnd="@dimen/_15sdp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
