--- a/app/src/main/res/layout/fragment_topic_details.xml
+++ b/app/src/main/res/layout/fragment_topic_details.xml
@@ -21,7 +21,7 @@
         android:layout_width="@dimen/_35sdp"
         android:layout_height="@dimen/_35sdp"
         android:layout_marginStart="@dimen/_14sdp"
-        android:layout_marginBottom="@dimen/_12sdp"
+        android:layout_marginBottom="@dimen/_22sdp"
         android:padding="@dimen/_10sdp"
         android:src="@drawable/ic_back"
         app:layout_constraintBottom_toBottomOf="@+id/view3"
@@ -60,16 +60,18 @@
         android:hint="Last message seen"
         android:paddingStart="@dimen/_20sdp"
         android:textColorHint="#3D3D3D"
+        android:fontFamily="@font/montserrat_medium"
+        android:textSize="@dimen/_12sdp"
         app:layout_constraintBottom_toBottomOf="@+id/view6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/view6"
         app:layout_constraintTop_toTopOf="@+id/view6" />
 
     <ImageView
-        android:layout_width="@dimen/_20sdp"
-        android:layout_height="@dimen/_20sdp"
+        android:layout_width="@dimen/_25sdp"
+        android:layout_height="@dimen/_25sdp"
         android:src="@drawable/ic_send_btn"
-        android:layout_marginEnd="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_5sdp"
         app:layout_constraintBottom_toBottomOf="@+id/editText2"
         app:layout_constraintEnd_toEndOf="@+id/editText2"
         app:layout_constraintTop_toTopOf="@+id/editText2" />
