--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -64,7 +64,7 @@
             android:layout_marginEnd="@dimen/_17sdp"
             android:background="@drawable/rounded_cornor_background"
             android:fontFamily="@font/montserrat_regular"
-            android:hint="@string/username"
+            android:hint="@string/full_name"
             android:inputType="text"
             android:textColor="@color/brown"
             android:textColorHint="@color/brown"
@@ -73,7 +73,8 @@
             android:textSize="@dimen/_11sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" />
+            app:layout_constraintTop_toBottomOf="@+id/textView4"
+            tools:ignore="HardcodedText" />
 
         <EditText
             android:id="@+id/email_et"
