--- a/app/src/main/res/layout/dialog_forgot_password.xml
+++ b/app/src/main/res/layout/dialog_forgot_password.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/montserrat_medium"
-        android:text="Forgot Password"
+        android:text="@string/forget_password"
         android:textColor="@color/black"
         android:textSize="@dimen/_16sdp"
         app:layout_constraintBottom_toTopOf="@+id/emailET"
