--- a/app/src/main/res/layout/fragment_create_new_topic.xml
+++ b/app/src/main/res/layout/fragment_create_new_topic.xml
@@ -267,6 +267,21 @@
                 app:layout_constraintEnd_toEndOf="@+id/mediaPickerIV"
                 app:layout_constraintStart_toStartOf="@+id/mediaPickerIV"
                 app:layout_constraintTop_toBottomOf="@+id/mediaPickerIV" />
+
+            <TextView
+                android:id="@+id/preview_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="end"
+                android:paddingHorizontal="@dimen/_17sdp"
+                android:text="@string/preview_video"
+                android:layout_marginTop="@dimen/_4sdp"
+                android:layout_marginEnd="@dimen/_4sdp"
+                android:textColor="@color/light_brown"
+                android:textSize="@dimen/_15sdp"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="@+id/mediaPickerIV"
+                app:layout_constraintTop_toTopOf="@+id/mediaPickerIV" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
