--- a/app/src/main/res/layout/fragment_preview_dialog.xml
+++ b/app/src/main/res/layout/fragment_preview_dialog.xml
@@ -11,11 +11,36 @@
         android:id="@+id/exo_videoView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="@dimen/_4sdp"
+        app:layout_constraintBottom_toTopOf="@+id/cancel_tv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:show_buffering="when_playing" />
 
+    <TextView
+        android:id="@+id/done_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat_medium"
+        android:text="@string/done"
+        android:padding="@dimen/_6sdp"
+        android:textColor="@color/light_brown"
+        android:textSize="@dimen/_14sdp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/cancel_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat_medium"
+        android:padding="@dimen/_6sdp"
+        android:text="@string/cancel"
+        android:layout_marginEnd="@dimen/_4sdp"
+        android:textColor="@color/light_brown"
+        android:textSize="@dimen/_14sdp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/done_tv" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
