--- a/app/src/main/res/layout/fragment_topic_details.xml
+++ b/app/src/main/res/layout/fragment_topic_details.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/montserrats_semibold"
         android:gravity="center"
-        android:text="Video Details"
+        android:text="@string/video_details"
         android:textColor="@color/light_brown"
         android:textSize="@dimen/_16ssp"
         app:layout_constraintBottom_toBottomOf="@+id/back_iv"
